tighten spacing around lab headings, fixes #194

--- a/public/css/screen.sass
+++ b/public/css/screen.sass
@@ -46,6 +46,8 @@ h2
 
 h3
   font-size: $normal
+  &.cats
+    margin-bottom: 0.5em
 
 h1, h2, h3
   a
